// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShiftviewChangeoverDialog > renders correctly in mobile view on orders tab 1`] = `
<div
  data-v-835ad30f=""
>
  <dialog-toolbar-stub
    color="lw-blue"
    data-v-835ad30f=""
    iconcolor="secondary-text"
    title="Edit changeover"
    titleicon=""
  />
  <v-card-text-stub
    class="d-flex flex-column dialog-content py-0 is-mobile"
    data-v-835ad30f=""
    tag="div"
  >
    <!--v-if-->
    <v-window-stub
      class="overflow-visible"
      continuous="false"
      crossfade="false"
      data-v-835ad30f=""
      direction="horizontal"
      disabled="false"
      mandatory="force"
      modelvalue="0"
      nexticon="$next"
      previcon="$prev"
      reverse="false"
      selectedclass="v-window-item--active"
      showarrows="false"
      tag="div"
      verticalarrows="false"
    >
      
      <v-window-item-stub
        class="mt-4"
        data-v-835ad30f=""
        disabled="false"
        eager="false"
      >
        <shiftview-search-stub
          class="mb-2"
          data-v-835ad30f=""
          density="compact"
          filteritemsonsearch="false"
          items=""
          itemsubtitlefunction="[Function]"
          itemsubtitlekey=""
          itemtitlekey="orderNumber"
          itemvaluekey="id"
        />
        <v-form-stub
          data-v-835ad30f=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            data-v-835ad30f=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <shiftview-cards-list-stub
              additionallineprops="[object Object]"
              bordercolorkey=""
              class="my-4 overflow-y-auto"
              data-v-835ad30f=""
              dense="true"
              disabled="false"
              iconcolorfn="[Function]"
              iconfn="[Function]"
              items=""
              primaryactionicon=""
              primaryactiontext=""
              primaryactiontooltip=""
              secondaryactionicon=""
              secondaryactiontooltip=""
              style="max-height: 300px;"
              subtitleitemsprops="[object Object],[object Object],[object Object],[object Object],[object Object]"
              tertiaryactionicon=""
              tertiaryactiontooltip=""
              titleiconfn="[Function]"
              titletextkey="orderNumber"
              verticalsubtitle="false"
            />
          </v-row-stub>
          <v-row-stub
            data-v-835ad30f=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <!--v-if-->
            <!--v-if-->
            <v-col-stub
              class="mb-2"
              cols="12"
              data-v-835ad30f=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                data-v-835ad30f=""
                density="compact"
                filled="true"
                grow="false"
                hint="LOT/Batch (optional)"
                maxlength="200"
                modelvalue=""
                placeholder="LOT/Batch (optional)"
                required="false"
                rules="true"
                truncateinput="false"
                type="text"
                usechip="false"
              />
            </v-col-stub>
            <v-col-stub
              class="mb-2 pl-1"
              cols="12"
              data-v-835ad30f=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-combobox-stub
                appendicon=""
                data-v-835ad30f=""
                density="compact"
                hint="Extra note (optional)"
                items=""
                maxlength="500"
                modelvalue=""
                persistent-hint=""
                placeholder="Extra note (optional)"
                positiontop="false"
                required="false"
                rules="true"
              />
            </v-col-stub>
          </v-row-stub>
        </v-form-stub>
      </v-window-item-stub>
      
    </v-window-stub>
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-835ad30f=""
    tag="div"
  >
    <delete-button-stub
      data-v-835ad30f=""
      id="delete-button"
    />
    <v-spacer-stub
      data-v-835ad30f=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-835ad30f=""
      icon=""
      iconcolor=""
      id="cancel-button"
      text="Cancel"
      textclass=""
      type="secondary"
    />
    <evocon-v-button-stub
      color="primary"
      data-v-835ad30f=""
      disabled="true"
      icon=""
      iconcolor=""
      id="save-button"
      loading="false"
      text="Save"
      textclass=""
      type="primary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`ShiftviewChangeoverDialog > renders correctly in mobile view on product tab 1`] = `
<div
  data-v-835ad30f=""
>
  <dialog-toolbar-stub
    color="lw-blue"
    data-v-835ad30f=""
    iconcolor="secondary-text"
    title="Edit changeover"
    titleicon=""
  />
  <v-card-text-stub
    class="d-flex flex-column dialog-content py-0 is-mobile"
    data-v-835ad30f=""
    tag="div"
  >
    <!--v-if-->
    <v-window-stub
      class="overflow-visible"
      continuous="false"
      crossfade="false"
      data-v-835ad30f=""
      direction="horizontal"
      disabled="false"
      mandatory="force"
      modelvalue="0"
      nexticon="$next"
      previcon="$prev"
      reverse="false"
      selectedclass="v-window-item--active"
      showarrows="false"
      tag="div"
      verticalarrows="false"
    >
      
      <v-window-item-stub
        class="mt-4"
        data-v-835ad30f=""
        disabled="false"
        eager="false"
      >
        <!--v-if-->
        <v-form-stub
          data-v-835ad30f=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            class="mb-2"
            data-v-835ad30f=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              cols="false"
              data-v-835ad30f=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <selection-input-stub
                checkbox="true"
                coloractiveprepend="false"
                data-v-835ad30f=""
                dense=""
                disabled="false"
                disabledvalues=""
                emittoggleall="false"
                emptyequalsallselected="false"
                error="false"
                filled="true"
                groupidkey="id"
                groups=""
                groupsorderby="name"
                hiddenitemscount="0"
                hidesearch="false"
                hint="Product"
                inverted="false"
                isgroupedselect="true"
                issingleselect="true"
                itemflag=""
                itemgroupidkey="groupId"
                items=""
                itemsecondarytext="sku"
                itemtertiarytext=""
                itemtext="name"
                itemvalue="id"
                loading="false"
                menuinputtype="primary"
                modelvalue=""
                numericorderby="false"
                placeholder="Product"
                prependtext=""
                removenonexistentselections="false"
                required="true"
                search-by-secondary-text="true"
                showemptyarrayasallselected="false"
                someselected="false"
                totalcount="0"
                usechips="false"
              />
            </v-col-stub>
          </v-row-stub>
          <v-row-stub
            data-v-835ad30f=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="pr-1 mb-2"
              cols="12"
              data-v-835ad30f=""
              lg="false"
              md="false"
              sm="6"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-with-selector-stub
                data-v-835ad30f=""
                hint="Target (optional)"
                items=""
                max-length="100"
                placeholder="Target (good quantity)"
                rules="true"
                selecteditem=""
                type="number"
                validate-on-blur=""
              />
            </v-col-stub>
            <!--v-if-->
            <v-col-stub
              class="mb-2"
              cols="12"
              data-v-835ad30f=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                data-v-835ad30f=""
                density="compact"
                filled="true"
                grow="false"
                hint="LOT/Batch (optional)"
                maxlength="200"
                modelvalue=""
                placeholder="LOT/Batch (optional)"
                required="false"
                rules="true"
                truncateinput="false"
                type="text"
                usechip="false"
              />
            </v-col-stub>
            <v-col-stub
              class="mb-2"
              cols="12"
              data-v-835ad30f=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-combobox-stub
                appendicon=""
                data-v-835ad30f=""
                density="compact"
                hint="Extra note (optional)"
                items=""
                maxlength="500"
                modelvalue=""
                persistent-hint=""
                placeholder="Extra note (optional)"
                positiontop="false"
                required="false"
                rules="true"
              />
            </v-col-stub>
          </v-row-stub>
        </v-form-stub>
      </v-window-item-stub>
      
    </v-window-stub>
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-835ad30f=""
    tag="div"
  >
    <delete-button-stub
      data-v-835ad30f=""
      id="delete-button"
    />
    <v-spacer-stub
      data-v-835ad30f=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-835ad30f=""
      icon=""
      iconcolor=""
      id="cancel-button"
      text="Cancel"
      textclass=""
      type="secondary"
    />
    <evocon-v-button-stub
      color="primary"
      data-v-835ad30f=""
      disabled="true"
      icon=""
      iconcolor=""
      id="save-button"
      loading="false"
      text="Save"
      textclass=""
      type="primary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`ShiftviewChangeoverDialog > renders correctly when is not product change 1`] = `
<div
  data-v-835ad30f=""
>
  <dialog-toolbar-stub
    color="lw-blue"
    data-v-835ad30f=""
    iconcolor="secondary-text"
    title="Add changeover 12:00"
    titleicon=""
  />
  <v-card-text-stub
    class="d-flex flex-column dialog-content py-0"
    data-v-835ad30f=""
    tag="div"
  >
    <!--v-if-->
    <v-window-stub
      class="overflow-visible"
      continuous="false"
      crossfade="false"
      data-v-835ad30f=""
      direction="horizontal"
      disabled="false"
      mandatory="force"
      modelvalue="0"
      nexticon="$next"
      previcon="$prev"
      reverse="false"
      selectedclass="v-window-item--active"
      showarrows="false"
      tag="div"
      verticalarrows="false"
    >
      
      <v-window-item-stub
        class="mt-4"
        data-v-835ad30f=""
        disabled="false"
        eager="false"
      >
        <shiftview-search-stub
          class="mb-2"
          data-v-835ad30f=""
          density="default"
          filteritemsonsearch="false"
          items=""
          itemsubtitlefunction="[Function]"
          itemsubtitlekey=""
          itemtitlekey="orderNumber"
          itemvaluekey="id"
        />
        <v-form-stub
          data-v-835ad30f=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            data-v-835ad30f=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <shiftview-cards-list-stub
              additionallineprops="[object Object]"
              bordercolorkey=""
              class="my-4 overflow-y-auto"
              data-v-835ad30f=""
              dense="false"
              disabled="false"
              iconcolorfn="[Function]"
              iconfn="[Function]"
              items=""
              primaryactionicon=""
              primaryactiontext=""
              primaryactiontooltip=""
              secondaryactionicon=""
              secondaryactiontooltip=""
              style="max-height: 300px;"
              subtitleitemsprops="[object Object],[object Object],[object Object],[object Object],[object Object]"
              tertiaryactionicon=""
              tertiaryactiontooltip=""
              titleiconfn="[Function]"
              titletextkey="orderNumber"
              verticalsubtitle="false"
            />
          </v-row-stub>
          <v-row-stub
            data-v-835ad30f=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <!--v-if-->
            <!--v-if-->
            <v-col-stub
              class="mb-2"
              cols="12"
              data-v-835ad30f=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                data-v-835ad30f=""
                density="default"
                filled="true"
                grow="false"
                hint="LOT/Batch (optional)"
                maxlength="200"
                modelvalue=""
                placeholder="LOT/Batch (optional)"
                required="false"
                rules="true"
                truncateinput="false"
                type="text"
                usechip="false"
              />
            </v-col-stub>
            <v-col-stub
              class="mb-2 pl-1"
              cols="12"
              data-v-835ad30f=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-combobox-stub
                appendicon=""
                data-v-835ad30f=""
                density="default"
                hint="Extra note (optional)"
                items=""
                maxlength="500"
                modelvalue=""
                persistent-hint=""
                placeholder="Extra note (optional)"
                positiontop="false"
                required="false"
                rules="true"
              />
            </v-col-stub>
          </v-row-stub>
        </v-form-stub>
      </v-window-item-stub>
      
    </v-window-stub>
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-835ad30f=""
    tag="div"
  >
    <!--v-if-->
    <v-spacer-stub
      data-v-835ad30f=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-835ad30f=""
      icon=""
      iconcolor=""
      id="cancel-button"
      text="Cancel"
      textclass=""
      type="secondary"
    />
    <evocon-v-button-stub
      color="primary"
      data-v-835ad30f=""
      disabled="true"
      icon=""
      iconcolor=""
      id="save-button"
      loading="false"
      text="Save"
      textclass=""
      type="primary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`ShiftviewChangeoverDialog > renders correctly when is product change 1`] = `
<div
  data-v-835ad30f=""
>
  <dialog-toolbar-stub
    color="lw-blue"
    data-v-835ad30f=""
    iconcolor="secondary-text"
    title="Edit changeover 12:00"
    titleicon=""
  />
  <v-card-text-stub
    class="d-flex flex-column dialog-content py-0"
    data-v-835ad30f=""
    tag="div"
  >
    <!--v-if-->
    <v-window-stub
      class="overflow-visible"
      continuous="false"
      crossfade="false"
      data-v-835ad30f=""
      direction="horizontal"
      disabled="false"
      mandatory="force"
      modelvalue="0"
      nexticon="$next"
      previcon="$prev"
      reverse="false"
      selectedclass="v-window-item--active"
      showarrows="false"
      tag="div"
      verticalarrows="false"
    >
      
      <v-window-item-stub
        class="mt-4"
        data-v-835ad30f=""
        disabled="false"
        eager="false"
      >
        <shiftview-search-stub
          class="mb-2"
          data-v-835ad30f=""
          density="default"
          filteritemsonsearch="false"
          items=""
          itemsubtitlefunction="[Function]"
          itemsubtitlekey=""
          itemtitlekey="orderNumber"
          itemvaluekey="id"
        />
        <v-form-stub
          data-v-835ad30f=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            data-v-835ad30f=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <shiftview-cards-list-stub
              additionallineprops="[object Object]"
              bordercolorkey=""
              class="my-4 overflow-y-auto"
              data-v-835ad30f=""
              dense="false"
              disabled="false"
              iconcolorfn="[Function]"
              iconfn="[Function]"
              items=""
              primaryactionicon=""
              primaryactiontext=""
              primaryactiontooltip=""
              secondaryactionicon=""
              secondaryactiontooltip=""
              style="max-height: 300px;"
              subtitleitemsprops="[object Object],[object Object],[object Object],[object Object],[object Object]"
              tertiaryactionicon=""
              tertiaryactiontooltip=""
              titleiconfn="[Function]"
              titletextkey="orderNumber"
              verticalsubtitle="false"
            />
          </v-row-stub>
          <v-row-stub
            data-v-835ad30f=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <!--v-if-->
            <!--v-if-->
            <v-col-stub
              class="mb-2"
              cols="12"
              data-v-835ad30f=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                data-v-835ad30f=""
                density="default"
                filled="true"
                grow="false"
                hint="LOT/Batch (optional)"
                maxlength="200"
                modelvalue=""
                placeholder="LOT/Batch (optional)"
                required="false"
                rules="true"
                truncateinput="false"
                type="text"
                usechip="false"
              />
            </v-col-stub>
            <v-col-stub
              class="mb-2 pl-1"
              cols="12"
              data-v-835ad30f=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-combobox-stub
                appendicon=""
                data-v-835ad30f=""
                density="default"
                hint="Extra note (optional)"
                items=""
                maxlength="500"
                modelvalue=""
                persistent-hint=""
                placeholder="Extra note (optional)"
                positiontop="false"
                required="false"
                rules="true"
              />
            </v-col-stub>
          </v-row-stub>
        </v-form-stub>
      </v-window-item-stub>
      
    </v-window-stub>
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-835ad30f=""
    tag="div"
  >
    <delete-button-stub
      data-v-835ad30f=""
      id="delete-button"
    />
    <v-spacer-stub
      data-v-835ad30f=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-835ad30f=""
      icon=""
      iconcolor=""
      id="cancel-button"
      text="Cancel"
      textclass=""
      type="secondary"
    />
    <evocon-v-button-stub
      color="primary"
      data-v-835ad30f=""
      disabled="true"
      icon=""
      iconcolor=""
      id="save-button"
      loading="false"
      text="Save"
      textclass=""
      type="primary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`ShiftviewChangeoverDialog > renders correctly when lineviewStation has timeModeActive 1`] = `
<div
  data-v-835ad30f=""
>
  <dialog-toolbar-stub
    color="lw-blue"
    data-v-835ad30f=""
    iconcolor="secondary-text"
    title="Edit changeover 12:00"
    titleicon=""
  />
  <v-card-text-stub
    class="d-flex flex-column dialog-content py-0"
    data-v-835ad30f=""
    tag="div"
  >
    <!--v-if-->
    <v-window-stub
      class="overflow-visible"
      continuous="false"
      crossfade="false"
      data-v-835ad30f=""
      direction="horizontal"
      disabled="false"
      mandatory="force"
      modelvalue="0"
      nexticon="$next"
      previcon="$prev"
      reverse="false"
      selectedclass="v-window-item--active"
      showarrows="false"
      tag="div"
      verticalarrows="false"
    >
      
      <v-window-item-stub
        class="mt-4"
        data-v-835ad30f=""
        disabled="false"
        eager="false"
      >
        <shiftview-search-stub
          class="mb-2"
          data-v-835ad30f=""
          density="default"
          filteritemsonsearch="false"
          items=""
          itemsubtitlefunction="[Function]"
          itemsubtitlekey=""
          itemtitlekey="name"
          itemvaluekey="id"
        />
        <v-form-stub
          data-v-835ad30f=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            class="my-4"
            data-v-835ad30f=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <!--v-if-->
            <v-col-stub
              class=""
              cols="12"
              data-v-835ad30f=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <shiftview-select-stub
                additionaltext=""
                data-v-835ad30f=""
                disabled="false"
                height="300px"
                itemappendicon=""
                items=""
                itemsubtitlefn="[Function]"
                itemsubtitlekey=""
                itemtext="name"
                itemvalue="id"
                mandatory="false"
                modelvalue=""
                showerror="false"
                subtitle="Products"
                title=""
              />
            </v-col-stub>
          </v-row-stub>
          <v-row-stub
            data-v-835ad30f=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="pr-1 mb-2"
              cols="12"
              data-v-835ad30f=""
              lg="false"
              md="false"
              sm="6"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-with-selector-stub
                data-v-835ad30f=""
                hint="Target time"
                items=""
                max-length="100"
                placeholder="Target time"
                rules="Target time"
                selecteditem=""
                type="number"
                validate-on-blur=""
              />
            </v-col-stub>
            <v-col-stub
              class="pl-1 mb-2"
              cols="12"
              data-v-835ad30f=""
              lg="false"
              md="false"
              sm="6"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-number-input-stub
                allowfloat="true"
                allownegative="false"
                data-v-835ad30f=""
                density="default"
                grow="false"
                hint="Quantity per signal (optional)"
                max-length="100"
                maxvalue="999999999999999"
                placeholder="Enter quantity (optional)"
                suffix=""
                usechip="false"
                validate-on-blur=""
              />
            </v-col-stub>
            <v-col-stub
              class="mb-2"
              cols="12"
              data-v-835ad30f=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                data-v-835ad30f=""
                density="default"
                filled="true"
                grow="false"
                hint="LOT/Batch (optional)"
                maxlength="200"
                modelvalue=""
                placeholder="LOT/Batch (optional)"
                rules="true"
                truncateinput="false"
                type="text"
                usechip="false"
              />
            </v-col-stub>
            <v-col-stub
              class="mb-2"
              cols="12"
              data-v-835ad30f=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-combobox-stub
                appendicon=""
                data-v-835ad30f=""
                density="default"
                hint="Extra note (optional)"
                items=""
                maxlength="500"
                modelvalue=""
                persistent-hint=""
                placeholder="Extra note (optional)"
                positiontop="false"
                rules="true"
              />
            </v-col-stub>
          </v-row-stub>
        </v-form-stub>
      </v-window-item-stub>
      
    </v-window-stub>
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-835ad30f=""
    tag="div"
  >
    <delete-button-stub
      data-v-835ad30f=""
      id="delete-button"
    />
    <v-spacer-stub
      data-v-835ad30f=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-835ad30f=""
      icon=""
      iconcolor=""
      id="cancel-button"
      text="Cancel"
      textclass=""
      type="secondary"
    />
    <evocon-v-button-stub
      color="primary"
      data-v-835ad30f=""
      disabled="true"
      icon=""
      iconcolor=""
      id="save-button"
      loading="false"
      text="Save"
      textclass=""
      type="primary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`ShiftviewChangeoverDialog > renders correctly with unit qty 1`] = `
<div
  data-v-835ad30f=""
>
  <dialog-toolbar-stub
    color="lw-blue"
    data-v-835ad30f=""
    iconcolor="secondary-text"
    title="Edit changeover 12:00"
    titleicon=""
  />
  <v-card-text-stub
    class="d-flex flex-column dialog-content py-0"
    data-v-835ad30f=""
    tag="div"
  >
    <!--v-if-->
    <v-window-stub
      class="overflow-visible"
      continuous="false"
      crossfade="false"
      data-v-835ad30f=""
      direction="horizontal"
      disabled="false"
      mandatory="force"
      modelvalue="0"
      nexticon="$next"
      previcon="$prev"
      reverse="false"
      selectedclass="v-window-item--active"
      showarrows="false"
      tag="div"
      verticalarrows="false"
    >
      
      <v-window-item-stub
        class="mt-4"
        data-v-835ad30f=""
        disabled="false"
        eager="false"
      >
        <shiftview-search-stub
          class="mb-2"
          data-v-835ad30f=""
          density="default"
          filteritemsonsearch="false"
          items=""
          itemsubtitlefunction="[Function]"
          itemsubtitlekey=""
          itemtitlekey="orderNumber"
          itemvaluekey="id"
        />
        <v-form-stub
          data-v-835ad30f=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            data-v-835ad30f=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <shiftview-cards-list-stub
              additionallineprops="[object Object]"
              bordercolorkey=""
              class="my-4 overflow-y-auto"
              data-v-835ad30f=""
              dense="false"
              disabled="false"
              iconcolorfn="[Function]"
              iconfn="[Function]"
              items=""
              primaryactionicon=""
              primaryactiontext=""
              primaryactiontooltip=""
              secondaryactionicon=""
              secondaryactiontooltip=""
              style="max-height: 300px;"
              subtitleitemsprops="[object Object],[object Object],[object Object],[object Object],[object Object]"
              tertiaryactionicon=""
              tertiaryactiontooltip=""
              titleiconfn="[Function]"
              titletextkey="orderNumber"
              verticalsubtitle="false"
            />
          </v-row-stub>
          <v-row-stub
            data-v-835ad30f=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <!--v-if-->
            <v-col-stub
              class="pr-1 mb-2"
              cols="12"
              data-v-835ad30f=""
              lg="false"
              md="false"
              sm="6"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-number-input-stub
                allowfloat="true"
                allownegative="false"
                data-v-835ad30f=""
                density="default"
                grow="false"
                hint="Quantity per signal (optional)"
                max-length="100"
                maxvalue="999999999999999"
                placeholder="Enter quantity (optional)"
                suffix=""
                usechip="false"
                validate-on-blur=""
              />
            </v-col-stub>
            <v-col-stub
              class="mb-2"
              cols="6"
              data-v-835ad30f=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                data-v-835ad30f=""
                density="default"
                filled="true"
                grow="false"
                hint="LOT/Batch (optional)"
                maxlength="200"
                modelvalue=""
                placeholder="LOT/Batch (optional)"
                rules="true"
                truncateinput="false"
                type="text"
                usechip="false"
              />
            </v-col-stub>
            <v-col-stub
              class="mb-2 pl-1"
              cols="12"
              data-v-835ad30f=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-combobox-stub
                appendicon=""
                data-v-835ad30f=""
                density="default"
                hint="Extra note (optional)"
                items=""
                maxlength="500"
                modelvalue=""
                persistent-hint=""
                placeholder="Extra note (optional)"
                positiontop="false"
                rules="true"
              />
            </v-col-stub>
          </v-row-stub>
        </v-form-stub>
      </v-window-item-stub>
      
    </v-window-stub>
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-835ad30f=""
    tag="div"
  >
    <delete-button-stub
      data-v-835ad30f=""
      id="delete-button"
    />
    <v-spacer-stub
      data-v-835ad30f=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-835ad30f=""
      icon=""
      iconcolor=""
      id="cancel-button"
      text="Cancel"
      textclass=""
      type="secondary"
    />
    <evocon-v-button-stub
      color="primary"
      data-v-835ad30f=""
      disabled="true"
      icon=""
      iconcolor=""
      id="save-button"
      loading="false"
      text="Save"
      textclass=""
      type="primary"
    />
  </v-card-actions-stub>
</div>
`;
